Closed Bug 80634 Opened 23 years ago Closed 23 years ago

Program received signal SIGSEGV, Segmentation fault.

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: timeless, Assigned: timeless)

References

()

Details

(Keywords: crash)

Attachments

(1 file)

from news://news.mozilla.org/3AFF37F2.8040106%40ucla.edu
###!!! ASSERTION: You can't dereference a NULL nsCOMPtr with
operator->().: 'mRawPtr != 0', file ../../../../dist/include/nsCOMPtr.h,
line 649

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 1024 (LWP 17447)]
0x4223b018 in nsGfxScrollFrameInner::Layout (this=0x82730c0,
aState=@0xbfffe634) at nsGfxScrollFrame.cpp:1256
/home/dimator/mozsrc/mozilla/layout/html/base/src/nsGfxScrollFrame.cpp:1256:4
1092:beg:0x4223b018
(gdb)
bt
#0  0x4223b018 in nsGfxScrollFrameInner::Layout (this=0x826ace0, 
aState=@0xbfffe634) at nsGfxScrollFrame.cpp:1256
#1  0x4223a819 in nsGfxScrollFrame::DoLayout (this=0x827336c, 
aState=@0xbfffe634) at nsGfxScrollFrame.cpp:1046

Your code is assuming GetMetricsFor succeeds. *don't do that* see:
http://lxr.mozilla.org/seamonkey/source/gfx/src/qt/nsRenderingContextQT.cpp#513
513   nsresult rv = mContext->GetMetricsFor(aFont,*getter_AddRefs(newMetrics));
514   if (NS_SUCCEEDED(rv)) {
515     rv = SetFont(newMetrics);
516   }

I'm assuming dshahbaz@ucla.edu is running Linux on a PC, but I could be wrong.
This was a Qt build, but that doesn't matter.

Considering the way the code appears to work, I'll attach an untested patch [My 
Qt Builds don't get this far].
whiteboard -> Bullet-proofing patch needs RS=
Whiteboard: bullet-proofing patch needs RS=
ok, checking in w/
NS_ASSERTION(fm,"FontMetrics is null assuming fontHeight == 1");
Assignee: evaughan → timeless
fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: bullet-proofing patch needs RS=
Target Milestone: --- → mozilla0.9.1
Marking verified in the May 22 build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: