Bugzilla Bug 80634 Program received signal SIGSEGV, Segmentation fault. Bullet-proofing patch + ASSERT. rs=shaver